# mailbox_processor

./: Cargo.toml
src/: callback.rs  lib.rs  notification_channel.rs  plain.rs
